---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Test reading messages
    - Update the text of the message
    - Only evaluate a message if the text is nil or number
    - See what would happen if you tried to edit it while the gui is open
    - Draft up code to support being conditionally selected by players
    - Change how i deal with selected structs
    - Constantly update while a player has the gui open
    - Cache always_show and show_in_chart
    - Doesn't really make sense to check upon selection end
    - Do not update when the gui is open and no one has alt mode on
    - Ignore cached always_show while you have the gui open
    - Keep track of which surfaces have players looking at them
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 13
  Info:
    - Initial commit