@@ -14,6 +14,7 @@ Date: ????
     - Do not update when the gui is open and no one has alt mode on
     - Ignore cached always_show while you have the gui open
     - Keep track of which surfaces have players looking at them
+    - Only tick structs on observed surfaces
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 13
